correct spacing

--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,6 @@ h1, h2 {
     text-transform: uppercase;
     color: #b4b4b4;
     letter-spacing: 4px;
-    /* padding: 200px 0 0 0; */
 }
 
 .wrapper .name {
@@ -168,8 +167,8 @@ h1, h2 {
     text-transform: uppercase;
     color: #2a2a2a;
     letter-spacing: 6px;
-    line-height: 73.5px;
-    margin: 50px 0 0 0;
+    /* line-height: 73.5px; */
+    margin: 40px 0 0 0;
 }
 
 .wrapper .subname {
@@ -177,7 +176,7 @@ h1, h2 {
     font-style: italic;
     font-size: 30px;
     color: #8f8f8f;
-    line-height: 62.5px;
+    /* margin: 21px 0 0 0; */
 }
 
 .wrapper .article p {
